# swagger/tag_groups/other_swagger.json
@@ -3031,6 +3031,50 @@
                           }
                         }
                       }
+                    },
+                    "attachments": {
+                      "type": "array",
+                      "description": "Array of file attachments on this message",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "id": {
+                            "type": "integer",
+                            "description": "The ID of the attachment"
+                          },
+                          "file_type": {
+                            "type": "string",
+                            "enum": [
+                              "image",
+                              "audio",
+                              "video",
+                              "file"
+                            ],
+                            "description": "The type of the attached file"
+                          },
+                          "external_url": {
+                            "type": [
+                              "string",
+                              "null"
+                            ],
+                            "description": "External URL for the attachment"
+                          },
+                          "extension": {
+                            "type": [
+                              "string",
+                              "null"
+                            ],
+                            "description": "File extension of the attachment"
+                          },
+                          "file_url": {
+                            "type": [
+                              "string",
+                              "null"
+                            ],
+                            "description": "URL to download the attached file"
+                          }
+                        }
+                      }
                     }
                   }
                 }
@@ -3187,6 +3231,50 @@
                   "type": "string",
                   "format": "date-time",
                   "description": "The time at which the reaction was created"
+                }
+              }
+            }
+          },
+          "attachments": {
+            "type": "array",
+            "description": "Array of file attachments on this message",
+            "items": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "integer",
+                  "description": "The ID of the attachment"
+                },
+                "file_type": {
+                  "type": "string",
+                  "enum": [
+                    "image",
+                    "audio",
+                    "video",
+                    "file"
+                  ],
+                  "description": "The type of the attached file"
+                },
+                "external_url": {
+                  "type": [
+                    "string",
+                    "null"
+                  ],
+                  "description": "External URL for the attachment"
+                },
+                "extension": {
+                  "type": [
+                    "string",
+                    "null"
+                  ],
+                  "description": "File extension of the attachment"
+                },
+                "file_url": {
+                  "type": [
+                    "string",
+                    "null"
+                  ],
+                  "description": "URL to download the attached file"
                 }
               }
             }
@@ -4709,6 +4797,30 @@
           "echo_id": {
             "type": "string",
             "description": "Client-generated ID for optimistic updates"
+          },
+          "attachments": {
+            "type": "array",
+            "description": "File attachments to include with the message",
+            "items": {
+              "type": "object",
+              "properties": {
+                "file": {
+                  "type": "string",
+                  "format": "binary",
+                  "description": "The file to attach"
+                },
+                "file_type": {
+                  "type": "string",
+                  "enum": [
+                    "image",
+                    "audio",
+                    "video",
+                    "file"
+                  ],
+                  "description": "The type of the attached file"
+                }
+              }
+            }
           }
         }
       },
